<resources>
    <string name="app_name">Sentinel Health</string>
    <string name="sentinel_title">Sentinel\nHealth</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="mobile_device_is_connected">Mobile device not paired</string>
    <string name="mobile_message">Mobile message</string>
    <string name="phone_message">Phone Message</string>
    <string name="message">Message Content</string>
    <string name="message_log">Message log</string>
    <string name="init">...</string>
    <string name="send_message_to_phone">Send Message to Phone</string>
    <string name="start_all_sensors">Medir FC y SpO2</string>
    <string name="send_alert">Enviar Alerta</string>
    <string name="signos_vitales">Signos Vitales</string>
    <string name="more_options">── más opciones ──</string>
    <!--
   Sensor
   -->
    <string name="StatusCalculating">Calculating…</string>
    <string name="StatusDeviceMoving">Device is moving.</string>
    <string name="StatusLowSignal">Low signal quality.</string>
    <string name="StatusCompleted">Measurement completed.</string>
    <string name="SpO2Value">SpO2 value: </string>
    <string name="StopLabel">Stop</string>
    <string name="StartLabel">Measure</string>
    <string name="SpO2">SpO2</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="HeartRateStatus">HR Status</string>
    <string name="Ibi">IBI</string>
    <string name="IbiStatus">IBI Status</string>
    <string name="Details">details >></string>
    <string name="TxtPercent">%</string>

    <string name="StatusDefaultValue">Press Measure to initiate SpO2 measurement.</string>
    <string name="SpO2DefaultValue">0</string>
    <string name="HeartRateDefaultValue">0</string>
    <string name="HeartRateStatusDefaultValue">0</string>
    <string name="IbiStatusDefaultValue">1</string>
    <string name="IbiDefaultValue">0</string>

    <string name="ConnectedToHs">Connected to Health Tracking Service.</string>
    <string name="ConnectionError">Could not connect to Health Tracking Service. Check error log.</string>
    <string name="HealthPlatformVersionIsOutdated">"Health Platform version is outdated or not installed.</string>
    <string name="NoPermission">Permissions Check Failed.</string>
    <string name="EcgSensorError">EcgSensorError Failed.</string>
    <string name="UnknownError"> UnknownError Failed.</string>
    <string name="SdkPolicyError">SDK Policy denied.</string>
    <string name="PermissionDeniedPermanently">Permissions denied. Grant permissions in watch settings and start application again.</string>
    <string name="PermissionDeniedRationale">User permissions are required to make a measurement.</string>
    <string name="MeasurementFailed">Measurement failed. Keep your watch tightly on and try again.</string>

    <string name="NoSpo2Support">SpO2 no supported on this device.</string>
    <string name="NoHrSupport">Heart Rate no supported on this device.</string>

    <string name="ExtraHr">Hr</string>
    <string name="ExtraHrStatus">HrStatus</string>
    <string name="ExtraIbi">Ibi</string>
    <string name="ExtraQualityIbi">QualityIbi</string>

    <string name="DetailsStatusNone">Initial heart rate measuring state.</string>
    <string name="DetailsStatusFindHr">Successful heart rate measurement.</string>
    <string name="DetailsStatusAttached">Wearable is attached.</string>
    <string name="DetailsStatusMoveDetection">Wearable move detection.</string>
    <string name="DetailsStatusDetached">Wearable is detached.</string>
    <string name="DetailsStatusLowReliability">PPG signal is weak.</string>
    <string name="DetailsStatusVeryLowReliability">PPG signal is too weak.</string>
    <string name="DetailsStatusNoDataFlush">flush() is called but no data.</string>
</resources>
